--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,161 @@
    --titulos:'Montserrat', sans-serif;
    --parrafos:'Roboto', sans-serif;
     /* colores */
-    --encabezado:rgb(71, 7, 52);
+    --encabezado:rgba(71, 7, 52, 0.384);
     --piepagina:rgb(20, 19, 19);
 --enlace:#fff;
 --enlacesobre:rgb(179, 85, 85);
 
+}
+
+/* selector universal (*) */
+*{
+    box-sizing: border-box;
+}
+
+
+/* notacion de una clase en css(.) */
+
+.home-wrapper{
+background-image: url("/images/categorias/book2.jpg");
+
+background-size: cover;
+/* pone la imagen del tamaño del contenedor */
+
+
+}
+/* header es un selector de etiqueta */
+header{
+    width: 100%;
+    background-color: var(--encabezado);
+    position: fixed;
+    padding: 10px 0;
+}
+/* combinacion de selectores de etiquetas en css */
+
+header nav{
+    float: right;
+    margin-top: 8px;
+
+}
+header img{
+    width: 100px;
+
+}
+header nav a{
+    text-decoration-skip: none;
+    color: var(--enlace);
+    margin-left: 6px;
+    
+
+    /* sección home, con un identificador en css (#) */
+
+}#home{ 
+    text-align: center;
+    padding: 250px;
+
+}
+
+
+#home p{
+    margin-top: 50px;
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+#home h1{
+margin-bottom: 45px;
+font: weight 700px; ;
+font-size: 3.2rem;
+color: var(--enlace);
+}
+
+.container{
+    width: 100px;
+    margin-right: auto;
+}
+
+section h2{
+    padding: 80px;
+
+}
+
+section h2{
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 2.5rem;
+}
+
+/*seccion novedades  */
+#novedades .box{
+    display: inline-block;
+    width: 33%;
+    padding: 8px;
+}
+
+#novedades .box p{
+    text-align: justify;
+}
+
+#novedades .box img{
+    padding: left 30%; ;
+    padding: bottom 10px; ;
+}
+
+#novedades .box h3{
+    text-align: center;
+}
+
+/* seccion categoria */
+#categoria .box{
+    width: 33%;
+    display: inline-block;
+    padding: 8px;
+}
+#categoria .box img{
+    width: 100%;
+}
+
+#caregoria .box h3{
+text-align: center;
+}
+/* contacto */
+
+#contacto{
+    background-image: url('/images/map-image.png');
+    background-color: black;
+background-size: cover;
+width:100% ;
+text-align: center;
+margin: 0 auto;
+}
+
+#contacto h2{
+    color: bisque;
+}
+#contacto input,select,textarea{
+width: 600px;
+padding: 10px,5px;
+border-radius: 5px;
+font-size: 18px;
+}
+/* footer o pie de pagina */
+footer{
+    width: 100%;
+    text-align: center;
+    color: blanchedalmond;
+    padding: 20px;
+    background-color: var(--piepagina);
+
+}
+select,textarea{
+    width: 600px;
+    text-align: center;
+    color: beige;
+    padding: 20px 0;
+    background-color: var(--piepagina);
+}
+iframe{
+    margin: 80px 10px;
 }
